--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -37,7 +37,7 @@ jobs:
         uses: actions/upload-pages-artifact@v3
         with:
           # Upload entire repository
-          path: './2week/project'
+          path: '2week/project'
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
